Created hero styles.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__tagline">
+            Deploy your websites in less than 60 seconds.
+          </p>
+          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+        </header>
+        <img class="hero__image" src="images/banner.png" alt="" />
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
